# apertium-krl

./: .gitattributes  .gitignore  AUTHORS  Makefile.am  README.markdown  README.md  apertium-krl.krl.acx  apertium-krl.krl.dix  apertium-krl.krl.leg  apertium-krl.krl.lexc  apertium-krl.krl.morf.twol  apertium-krl.pc.in  configure.ac  modes.xml
dev/: apestream2lexces.bash  foo.py  kks.wordlist  puupankkiiri.bash
docs/: apertium-krl.krl.lexc.md  index.md  statistics.md
test/: krl-input.txt  krl-morph-expected.txt  tests.json
texts/: omamua-11307.text  omamua-11602.text  omamua-2013-no10-oma-koti.text  omamua-2018-no1-nuori-kyykk.text  omamua1.txt  omamua1.vislcg.txt  vepkar-1427.text  vepkar-1652.text  vepkar-1663.text  vepkar-1698-human-translated.text  vepkar-1698.text  vepkar-1708.text  vepkar-1740.text  vepkar-1753.text  vepkar-1768.text  vepkar-1774.text
texts/puupankki/: puupankki.krl.conllu
